--- a/templates/index.html
+++ b/templates/index.html
@@ -1,15 +1,85 @@
-<form method ="POST" action="">
-    ID <input type="text" name="id" />
-    <br>
-    Firstname <input type="text" name="firstname" />
-    <br>
-    Lastname <input type="text" name="lastname" />
-    <br>
-    Course <input type="text" name="course" />
-    <br>
-    Year <input type="text" name="year" />
-    <br>
-    Gender <input type="text" name="gender" />
-    <br>
-    <input type="submit">
-  </form>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Student Info</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <link href="{{url_for('static', filename = 'css/bootstrap.min.css')}}" rel="stylesheet">
+</head>
+<body>
+    <div class="container">
+        <div class="row">
+            <div class="col-md-12">
+                <h1>Student Information System</h1>
+                <h2>Student List</h2>
+
+                {%with messages = get_flashed_messages()%}
+
+                {%if messages%}
+
+                {%for message in messages%}
+
+                {{message}}
+                {%endfor%}
+                {%endif%}
+                {%endwith%}
+                
+
+
+
+                <!-- Add a form element with "POST" method and specify the action attribute -->
+                <form method="POST" action="/insert">
+                    <table class="table table-striped">
+                        <tr>
+                            <th>ID</th>
+                            <th>First Name</th>
+                            <th>Last Name</th>
+                            <th>Course</th>
+                            <th>Year</th>
+                            <th>Gender</th>
+                                
+                        </tr>
+                        
+                       
+                        <tr>
+                            <td><input type="text" name="id"></td>
+                            <td><input type="text" name="firstname"></td>
+                            <td><input type="text" name="lastname"></td>
+                            <td><input type="text" name="course"></td>
+                            <td><input type="text" name="year"></td>
+                            <td><input type="text" name="gender"></td>
+                            <td><input type="submit"></td>
+                        </tr>
+                        
+                        {% for student in students %}
+                        <tr>
+                            <td>{{student.0}}</td>
+                            <td>{{student.1}}</td>
+                            <td>{{student.2}}</td>
+                            <td>{{student.3}}</td>
+                            <td>{{student.4}}</td>
+                            <td>{{student.5}}</td>
+                            <td>
+                                <a href="/update/{{students.0}}" class="btn btn-warning btn-xs" data-toggle="modal" data-target="#modaledit{{students.0}}">Edit</a>
+                                <a href="/delete/{{students.0 }}" class="btn btn-danger btn-xs" onclick="return confirm('Are You Sure For Delete?')">Delete</a>                
+                            </td>
+                        </tr>
+                        {% endfor %}
+                    </table>
+
+                </form>
+            </div>
+        </div>
+    </div>
+    
+
+
+    
+</body>
+
+
+<script type="text/javascript" src="{{url_for('static', filename='js/jquery-3.2.1.min.js') }}"></script>
+<script type="text/javascript" src="{{url_for('static', filename = 'js/bootstrap.min.js')}}"></script>
+
+</html>
