--- a/templates/index.html
+++ b/templates/index.html
@@ -5,29 +5,42 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Student Info</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-    <link href="{{url_for('static', filename = 'css/bootstrap.min.css')}}" rel="stylesheet">
+    <link href="{{ url_for('static', filename='css/bootstrap.min.css') }}" rel="stylesheet">
 </head>
 <body>
+
+    
+
+
+
     <div class="container">
         <div class="row">
             <div class="col-md-12">
                 <h1>Student Information System</h1>
-                <h2>Student List</h2>
-
-                {%with messages = get_flashed_messages()%}
-
-                {%if messages%}
-
-                {%for message in messages%}
-
-                {{message}}
-                {%endfor%}
-                {%endif%}
-                {%endwith%}
+                <nav class="navbar navbar-expand-lg bg-body-tertiary">
+                    <div class="container-fluid">
+                      <a class="navbar-brand" href="#">Student</a>
+                      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+                        <span class="navbar-toggler-icon"></span>
+                      </button>
+                      <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+                        <div class="navbar-nav">
+                          <a class="nav-link" aria-current="page" href="#">Course</a>
+                          <a class="nav-link" href="#">College</a>
+                        </div>
+                      </div>
+                    </div>
+                  </nav>
                 
 
-
-
+                {% with messages = get_flashed_messages() %}
+                    {% if messages %}
+                        {% for message in messages %}
+                            {{ message }}
+                        {% endfor %}
+                    {% endif %}
+                {% endwith %}
+                
                 <!-- Add a form element with "POST" method and specify the action attribute -->
                 <form method="POST" action="/insert">
                     <table class="table table-striped">
@@ -38,10 +51,9 @@
                             <th>Course</th>
                             <th>Year</th>
                             <th>Gender</th>
-                                
+                            <th>Action</th> <!-- Added an "Action" column -->
                         </tr>
-                        
-                       
+
                         <tr>
                             <td><input type="text" name="id"></td>
                             <td><input type="text" name="firstname"></td>
@@ -53,33 +65,69 @@
                         </tr>
                         
                         {% for student in students %}
-                        <tr>
-                            <td>{{student.0}}</td>
-                            <td>{{student.1}}</td>
-                            <td>{{student.2}}</td>
-                            <td>{{student.3}}</td>
-                            <td>{{student.4}}</td>
-                            <td>{{student.5}}</td>
-                            <td>
-                                <a href="/update/{{students.0}}" class="btn btn-warning btn-xs" data-toggle="modal" data-target="#modaledit{{students.0}}">Edit</a>
-                                <a href="/delete/{{students.0 }}" class="btn btn-danger btn-xs" onclick="return confirm('Are You Sure For Delete?')">Delete</a>                
-                            </td>
-                        </tr>
+                            <tr>
+                                <td>{{ student.0 }}</td>
+                                <td>{{ student.1 }}</td>
+                                <td>{{ student.2 }}</td>
+                                <td>{{ student.3 }}</td>
+                                <td>{{ student.4 }}</td>
+                                <td>{{ student.5 }}</td>
+                                <td>
+                                    <a href="/update/{{ student.0 }}" class="btn btn-warning btn-xs" data-toggle="modal" data-target="#modaledit{{ student.0 }}">Update</a>
+                                    <a href="/delete/{{ student.0 }}" class="btn btn-danger btn-xs" onclick="return confirm('Are You Sure For Delete?')">Delete</a>
+                                </td>
+                            </tr>
                         {% endfor %}
                     </table>
-
                 </form>
+
+                {% for student in students %}
+                    <div id="modaledit{{ student.0 }}" class="modal fade" role="dialog">
+                        <div class="modal-dialog">
+                            <div class="modal-content">
+                                <div class="modal-header">
+                                    <button type="button" class="close" data-dismiss="modal">x</button>
+                                    <h4 class="modal-title">Update Information</h4>
+                                </div>
+                                <div class="modal-body">
+                                    <form action="{{ url_for('update', id=student.0) }}" method="POST">
+                                        <div class="form-group">
+                                            <label>First Name:</label>
+                                            <input type="text" class="form-control" name="firstname" value="{{ student.1 }}">
+                                        </div>
+                                        <div class="form-group">
+                                            <label>Last Name:</label>
+                                            <input type="text" class="form-control" name="lastname" value="{{ student.2 }}">
+                                        </div>
+                                        <div class="form-group">
+                                            <label>Course</label>
+                                            <input type="text" class="form-control" name="course" value="{{ student.3 }}">
+                                        </div>
+                                        <div class="form-group">
+                                            <label>Year:</label>
+                                            <input type="text" class="form-control" name="year" value="{{ student.4 }}">
+                                        </div>
+                                        <div class="form-group">
+                                            <label>Gender:</label>
+                                            <input type="text" class="form-control" name="gender" value="{{ student.5 }}">
+                                        </div>
+                                        <div class="form-group">
+                                            <button class="btn btn-primary" type="submit">Update</button>
+                                        </div>
+                                    </form>
+                                </div>
+                                <div class="modal-footer">
+                                    <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                {% endfor %}
             </div>
         </div>
     </div>
-    
 
-
-    
+    <script type="text/javascript" src="{{ url_for('static', filename='js/jquery-3.2.1.min.js') }}"></script>
+    <script type="text/javascript" src="{{ url_for('static', filename='js/bootstrap.min.js') }}"></script>
 </body>
-
-
-<script type="text/javascript" src="{{url_for('static', filename='js/jquery-3.2.1.min.js') }}"></script>
-<script type="text/javascript" src="{{url_for('static', filename = 'js/bootstrap.min.js')}}"></script>
-
 </html>
