--- a/templates/index.html
+++ b/templates/index.html
@@ -9,29 +9,35 @@
 </head>
 <body>
 
-    
-
-
 
     <div class="container">
         <div class="row">
             <div class="col-md-12">
                 <h1>Student Information System</h1>
-                <nav class="navbar navbar-expand-lg bg-body-tertiary">
-                    <div class="container-fluid">
-                      <a class="navbar-brand" href="#">Student</a>
-                      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-                        <span class="navbar-toggler-icon"></span>
-                      </button>
-                      <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-                        <div class="navbar-nav">
-                          <a class="nav-link" aria-current="page" href="#">Course</a>
-                          <a class="nav-link" href="#">College</a>
-                        </div>
-                      </div>
+                <nav class="navbar navbar-expand-lg navbar-light bg-light">
+                    <div class="collapse navbar-collapse" id="navbarNav">
+                        <ul class="navbar-nav">
+                            <li class="nav-item">
+                                <a class="nav-link" href="/students">Students</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="/courses">Courses</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="/colleges">Colleges</a>
+                            </li>
+                        </ul>
+                        <nav class="navbar bg-body-tertiary">
+                            <div class="container-fluid">
+                              <form class="d-flex" role="search">
+                                <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+                                <button class="btn btn-outline-success" type="submit">Search</button>
+                              </form>
+                            </div>
+                          </nav>
                     </div>
-                  </nav>
-                
+                </nav>
+            
 
                 {% with messages = get_flashed_messages() %}
                     {% if messages %}
@@ -75,6 +81,7 @@
                                 <td>
                                     <a href="/update/{{ student.0 }}" class="btn btn-warning btn-xs" data-toggle="modal" data-target="#modaledit{{ student.0 }}">Update</a>
                                     <a href="/delete/{{ student.0 }}" class="btn btn-danger btn-xs" onclick="return confirm('Are You Sure For Delete?')">Delete</a>
+
                                 </td>
                             </tr>
                         {% endfor %}
