--- a/templates/index.html
+++ b/templates/index.html
@@ -3,134 +3,40 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Student Info</title>
+    <title>{% block title %}Student Info{% endblock %}</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link href="{{ url_for('static', filename='css/bootstrap.min.css') }}" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
 </head>
-<body>
 
+<body class="bg-gradient-to-r from-blue-200 via-teal-400 to-orange-500">
 
-    <div class="container">
-        <div class="row">
-            <div class="col-md-12">
-                <h1>Student Information System</h1>
-                <nav class="navbar navbar-expand-lg navbar-light bg-light">
-                    <div class="collapse navbar-collapse" id="navbarNav">
-                        <ul class="navbar-nav">
-                            <li class="nav-item">
-                                <a class="nav-link" href="/students">Students</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="/courses">Courses</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="/colleges">Colleges</a>
-                            </li>
-                        </ul>
-                        <nav class="navbar bg-body-tertiary">
-                            <div class="container-fluid">
-                              <form class="d-flex" role="search">
-                                <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-                                <button class="btn btn-outline-success" type="submit">Search</button>
-                              </form>
-                            </div>
-                          </nav>
-                    </div>
-                </nav>
-            
+    <div>
+        <div class="container mx-auto p-4">
+            <h1 class="bg-blue-500 text-white py-4 font-extrabold text-lg text-center">STUDENT INFORMATION SYSTEM</h1>
+            <nav class="bg-light py-4 text-center">
+                <ul class="flex justify-center">
+                    <li class="mr-4 {% if request.path == '/students' %}bg-green-400 text-white{% endif %}">
+                        <a class="text-blue-600 hover:text-blue-700" href="/students">Students</a>
+                    </li>
+                    <li class="mr-4 {% if request.path == '/courses' %}bg-green-400 text-white{% endif %}">
+                        <a class="text-blue-600 hover:text-blue-700" href="/courses">Courses</a>
+                    </li>
+                    <li class="{% if request.path == '/colleges' %}bg-green-400 text-white{% endif %}">
+                        <a class="text-blue-600 hover:text-blue-700" href="/colleges">Colleges</a>
+                    </li>
+                </ul>
+            </nav>
 
-                {% with messages = get_flashed_messages() %}
-                    {% if messages %}
-                        {% for message in messages %}
-                            {{ message }}
-                        {% endfor %}
-                    {% endif %}
-                {% endwith %}
-                
-                <!-- Add a form element with "POST" method and specify the action attribute -->
-                <form method="POST" action="/insert">
-                    <table class="table table-striped">
-                        <tr>
-                            <th>ID</th>
-                            <th>First Name</th>
-                            <th>Last Name</th>
-                            <th>Course</th>
-                            <th>Year</th>
-                            <th>Gender</th>
-                            <th>Action</th> <!-- Added an "Action" column -->
-                        </tr>
+            {% with messages = get_flashed_messages() %}
+                {% if messages %}
+                    {% for message in messages %}
+                        <div class="bg-green-300 p-2 my-2 text-green-900">{{ message }}</div>
+                    {% endfor %}
+                {% endif %}
+            {% endwith %}
 
-                        <tr>
-                            <td><input type="text" name="id"></td>
-                            <td><input type="text" name="firstname"></td>
-                            <td><input type="text" name="lastname"></td>
-                            <td><input type="text" name="course"></td>
-                            <td><input type="text" name="year"></td>
-                            <td><input type="text" name="gender"></td>
-                            <td><input type="submit"></td>
-                        </tr>
-                        
-                        {% for student in students %}
-                            <tr>
-                                <td>{{ student.0 }}</td>
-                                <td>{{ student.1 }}</td>
-                                <td>{{ student.2 }}</td>
-                                <td>{{ student.3 }}</td>
-                                <td>{{ student.4 }}</td>
-                                <td>{{ student.5 }}</td>
-                                <td>
-                                    <a href="/update/{{ student.0 }}" class="btn btn-warning btn-xs" data-toggle="modal" data-target="#modaledit{{ student.0 }}">Update</a>
-                                    <a href="/delete/{{ student.0 }}" class="btn btn-danger btn-xs" onclick="return confirm('Are You Sure For Delete?')">Delete</a>
-
-                                </td>
-                            </tr>
-                        {% endfor %}
-                    </table>
-                </form>
-
-                {% for student in students %}
-                    <div id="modaledit{{ student.0 }}" class="modal fade" role="dialog">
-                        <div class="modal-dialog">
-                            <div class="modal-content">
-                                <div class="modal-header">
-                                    <button type="button" class="close" data-dismiss="modal">x</button>
-                                    <h4 class="modal-title">Update Information</h4>
-                                </div>
-                                <div class="modal-body">
-                                    <form action="{{ url_for('update', id=student.0) }}" method="POST">
-                                        <div class="form-group">
-                                            <label>First Name:</label>
-                                            <input type="text" class="form-control" name="firstname" value="{{ student.1 }}">
-                                        </div>
-                                        <div class="form-group">
-                                            <label>Last Name:</label>
-                                            <input type="text" class="form-control" name="lastname" value="{{ student.2 }}">
-                                        </div>
-                                        <div class="form-group">
-                                            <label>Course</label>
-                                            <input type="text" class="form-control" name="course" value="{{ student.3 }}">
-                                        </div>
-                                        <div class="form-group">
-                                            <label>Year:</label>
-                                            <input type="text" class="form-control" name="year" value="{{ student.4 }}">
-                                        </div>
-                                        <div class="form-group">
-                                            <label>Gender:</label>
-                                            <input type="text" class="form-control" name="gender" value="{{ student.5 }}">
-                                        </div>
-                                        <div class="form-group">
-                                            <button class="btn btn-primary" type="submit">Update</button>
-                                        </div>
-                                    </form>
-                                </div>
-                                <div class="modal-footer">
-                                    <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                {% endfor %}
-            </div>
+            {% block content %}{% endblock %}
         </div>
     </div>
 
