COLLEGE PAGE TOTALLY WORKS

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -7,22 +7,39 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link href="{{ url_for('static', filename='css/bootstrap.min.css') }}" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+
+    <style>
+        body {
+            min-height: 100vh;
+        }
+        table {
+            border-collapse: collapse;
+            width: 100%;
+        }
+        th, td {
+            border: 1px solid black; /* Set the border to solid black */
+            padding: 8px;
+            text-align: left;
+        }
+    </style>
 </head>
 
-<body class="bg-gradient-to-r from-blue-200 via-teal-400 to-orange-500">
+<body class="bg-gradient-to-r from-blue-100 via-teal-100 to-orange-900">
 
     <div>
         <div class="container mx-auto p-4">
             <h1 class="bg-blue-500 text-white py-4 font-extrabold text-lg text-center">STUDENT INFORMATION SYSTEM</h1>
             <nav class="bg-light py-4 text-center">
                 <ul class="flex justify-center">
-                    <li class="mr-4 {% if request.path == '/students' %}bg-green-400 text-white{% endif %}">
+                    <li class="mr-4 {% if request.path == '/students' %}bg-blue-100 text-white{% endif %}">
                         <a class="text-blue-600 hover:text-blue-700" href="/students">Students</a>
                     </li>
-                    <li class="mr-4 {% if request.path == '/courses' %}bg-green-400 text-white{% endif %}">
+                    <li class="mr-4 {% if request.path == '/courses' %}bg-blue-100 text-white{% endif %}">
                         <a class="text-blue-600 hover:text-blue-700" href="/courses">Courses</a>
                     </li>
-                    <li class="{% if request.path == '/colleges' %}bg-green-400 text-white{% endif %}">
+                    <li class="{% if request.path == '/colleges' %}bg-blue-100 text-white{% endif %}">
                         <a class="text-blue-600 hover:text-blue-700" href="/colleges">Colleges</a>
                     </li>
                 </ul>
