--- a/app/templates/colleges.html
+++ b/app/templates/colleges.html
@@ -6,7 +6,7 @@
     <div class="container mt-5">
         <form method="POST" action="/search_colleges" class="mt-3">
             <div class="input-group">
-                <input type="text" name="search" class="form-control search-input" style="width: 500px;" placeholder="Search colleges by Code or Name">
+                <input type="text" name="search" class="form-control search-input" style="width: 250px;" placeholder="Search colleges">
                 <button type="submit" class="btn btn-primary">Search</button>
             </div>
         </form>
@@ -42,12 +42,12 @@
     <div class="modal fade" id="createModal" tabindex="-1" role="dialog" aria-labelledby="createModalLabel" aria-hidden="true">
         <div class="modal-dialog" role="document">
             <div class="modal-content">
-                <div class="modal-header bg-primary text-white">
-                    <h5 class="modal-title" id="createModalLabel">Create College</h5>
+                <div class="modal-header bg-custom text-white">
+                    <h5 class="modal-title" id="createModalLabel">Create Student</h5>
                     <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                         <span aria-hidden="true">&times;</span>
                     </button>
-                </div>
+                </div>                
                 <div class="modal-body">
                     <form method="POST" action="/insert_colleges">
                         <div class="form-group">
@@ -69,7 +69,7 @@
     <div class="modal fade" id="updateModal{{ college[0] }}" tabindex="-1" role="dialog" aria-labelledby="updateModalLabel{{ college[0] }}" aria-hidden="true">
         <div class="modal-dialog" role="document">
             <div class="modal-content">
-                <div class="modal-header bg-primary text-white">
+                <div class="modal-header bg-custom text-white">
                     <h5 class="modal-title" id="updateModalLabel{{ college[0] }}">Update College</h5>
                     <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                         <span aria-hidden="true">&times;</span>
