--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -8,18 +8,21 @@
     <link href="{{ url_for('static', filename='css/bootstrap.min.css') }}" rel="stylesheet">
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-
-   
+    <link rel="stylesheet" href="static/css/styles.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Cabin:wght@400;600;700&family=Lato:wght@300;400;700;900&family=Poppins:ital,wght@0,100;0,200;0,400;0,700;0,900;1,100&family=Roboto+Flex:opsz,wght@8..144,200&family=Roboto+Serif:opsz,wght@8..144,500;8..144,600&family=Roboto:ital,wght@0,300;0,400;1,300&display=swap" rel="stylesheet">
 
 </head>
 <body class="bg-light">
 
     <div class="container">
-        <header class="bg-dark text-white py-4 text-center" style="background-image: url('your-image.jpg'); background-size: cover;">
+        <header class="text-white py-4 text-center title">
             <h1 class="h2 font-weight-bold">STUDENT INFORMATION SYSTEM</h1>
         </header>        
 
-        <nav class="navbar navbar-expand-lg bg-body-tertiary">
+        <nav class="navbar navbar-expand-lg navbar-light bg-body-tertiary">
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
                 <span class="navbar-toggler-icon"></span>
             </button>
@@ -27,18 +30,36 @@
                 <div class="d-flex justify-content-center">
                     <ul class="navbar-nav">
                         <li class="nav-item {% if request.path == '/students' %}active{% endif %}">
-                            <a class="nav-link" href="/students">Students</a>
+                            <a class="nav-link" href="/students">
+                                <div class="d-flex align-items-center">
+                                    <i class="fas fa-graduation-cap"></i>
+                                    <span class="navbar-text">Students</span>
+                                </div>
+                            </a>
                         </li>
                         <li class="nav-item {% if request.path == '/courses' %}active{% endif %}">
-                            <a class="nav-link" href="/courses">Courses</a>
+                            <a class="nav-link" href="/courses">
+                                <div class="d-flex align-items-center">
+                                    <i class="fas fa-book"></i>
+                                    <span class="navbar-text">Courses</span>
+                                </div>
+                            </a>
                         </li>
                         <li class="nav-item {% if request.path == '/colleges' %}active{% endif %}">
-                            <a class="nav-link" href="/colleges">Colleges</a>
+                            <a class="nav-link" href="/colleges">
+                                <div class="d-flex align-items-center">
+                                    <i class="fas fa-university"></i>
+                                    <span class="navbar-text">Colleges</span>
+                                </div>
+                            </a>
                         </li>
                     </ul>
                 </div>
             </div>
         </nav>
+        
+        
+        
         
         <main class="my-4">
             {% with messages = get_flashed_messages() %}
