Made a dropdown for the column 'year'

--- a/app/templates/students/add_student.html
+++ b/app/templates/students/add_student.html
@@ -36,6 +36,7 @@
 
         <div class="form-group">
             {{ form.year.label(class="form-label") }}
+            {{ form.set_year_choices() }}
             {{ form.year(class="form-control") }}
         </div>
 
