--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -34,7 +34,7 @@
                             <a class="nav-link" href="/students">
                                 <div class="d-flex align-items-center">
                                     <i class="fas fa-graduation-cap"></i>
-                                    <span class="navbar-text">Students</span>
+                                    <span class="navbar-text">STUDENTS</span>
                                 </div>
                             </a>
                         </li>
@@ -42,7 +42,7 @@
                             <a class="nav-link" href="/courses">
                                 <div class="d-flex align-items-center">
                                     <i class="fas fa-book"></i>
-                                    <span class="navbar-text">Courses</span>
+                                    <span class="navbar-text">COURSES</span>
                                 </div>
                             </a>
                         </li>
@@ -50,7 +50,7 @@
                             <a class="nav-link" href="/colleges">
                                 <div class="d-flex align-items-center">
                                     <i class="fas fa-university"></i>
-                                    <span class="navbar-text">Colleges</span>
+                                    <span class="navbar-text">COLLEGES</span>
                                 </div>
                             </a>
                         </li>
