--- a/app/templates/students/students.html
+++ b/app/templates/students/students.html
@@ -38,6 +38,7 @@
                 <th>First Name</th>
                 <th>Last Name</th>
                 <th>Course</th>
+                <th>College</th>
                 <th>Year</th>
                 <th>Gender</th>
                 <th>Action</th>
@@ -59,6 +60,7 @@
                 <td>{{ student.firstname }}</td>
                 <td>{{ student.lastname }}</td>
                 <td>{{ student.course_code }}</td>
+                <td>{{ student.college_code }}</td>
                 <td>{{ student.year }}</td>
                 <td>{{ student.gender }}</td>
                 <td>
