--- a/app/templates/students/students.html
+++ b/app/templates/students/students.html
@@ -60,7 +60,7 @@
                 <td>{{ student.firstname }}</td>
                 <td>{{ student.lastname }}</td>
                 <td>{{ student.course_code }}</td>
-                <td>{{ student.college_code }}</td>
+                <td>{{ student.college_name }} ({{ student.college_code }})</td> <!-- Display both college code and college name -->
                 <td>{{ student.year }}</td>
                 <td>{{ student.gender }}</td>
                 <td>
